# rust-bundler

./: Cargo.toml  README.md  clippy.toml  rustfmt.toml
crates/bundler-cli/: Cargo.toml
crates/bundler-cli/src/: main.rs
crates/bundler_core/: Cargo.toml
crates/bundler_core/src/: bundler.rs  chunk.rs  compiler.rs  config.rs  dependency.rs  error.rs  lib.rs  loader.rs  module.rs  plugin.rs  types.rs
crates/bundler_resolver/: Cargo.toml
crates/bundler_resolver/src/: lib.rs
examples/basic/src/: config.mts  index.js  utils.js
xtask/: Cargo.toml
